--- a/files/index/styles.css
+++ b/files/index/styles.css
@@ -1,11 +1,11 @@
 ﻿body {
   margin:0px;
   background-image:none;
-  position:static;
-  left:auto;
-  width:521px;
-  margin-left:0;
-  margin-right:0;
+  position:relative;
+  left:-0px;
+  width:422px;
+  margin-left:auto;
+  margin-right:auto;
   text-align:left;
 }
 #base {
@@ -33,7 +33,7 @@
 #u0 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:0px;
   width:422px;
   height:734px;
@@ -58,7 +58,7 @@
 #u1 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:0px;
   width:420px;
   height:83px;
@@ -75,7 +75,7 @@
 #u2 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:83px;
   width:422px;
   height:651px;
@@ -2856,7 +2856,7 @@
 #u89 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:0px;
   width:420px;
   height:734px;
