--- a/files/修改联系人信息/styles.css
+++ b/files/修改联系人信息/styles.css
@@ -1,11 +1,11 @@
 ﻿body {
   margin:0px;
   background-image:none;
-  position:static;
-  left:auto;
-  width:521px;
-  margin-left:0;
-  margin-right:0;
+  position:relative;
+  left:-0px;
+  width:422px;
+  margin-left:auto;
+  margin-right:auto;
   text-align:left;
 }
 #base {
@@ -36,7 +36,7 @@
 #u216 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:0px;
   width:422px;
   height:734px;
@@ -64,7 +64,7 @@
 #u217 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:0px;
   width:420px;
   height:83px;
@@ -92,7 +92,7 @@
 #u218 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:93px;
   width:400px;
   height:157px;
@@ -131,7 +131,7 @@
 #u219 {
   border-width:0px;
   position:absolute;
-  left:307px;
+  left:208px;
   top:107px;
   width:29px;
   height:20px;
@@ -171,7 +171,7 @@
 #u220 {
   border-width:0px;
   position:absolute;
-  left:372px;
+  left:273px;
   top:107px;
   width:40px;
   height:20px;
@@ -200,9 +200,9 @@
 #u221p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
-  width:36px;
+  width:38px;
   height:6px;
 }
 #u221p000_img {
@@ -210,13 +210,13 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:38px;
   height:6px;
 }
 #u221p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -232,7 +232,7 @@
 #u221p002 {
   border-width:0px;
   position:absolute;
-  left:18px;
+  left:17px;
   top:-9px;
   width:22px;
   height:20px;
@@ -252,7 +252,7 @@
 #u221 {
   border-width:0px;
   position:absolute;
-  left:340px;
+  left:241px;
   top:117px;
   width:32px;
   height:1px;
@@ -291,7 +291,7 @@
 #u222 {
   border-width:0px;
   position:absolute;
-  left:261px;
+  left:162px;
   top:107px;
   width:29px;
   height:20px;
@@ -330,7 +330,7 @@
 #u223 {
   border-width:0px;
   position:absolute;
-  left:215px;
+  left:116px;
   top:107px;
   width:39px;
   height:20px;
@@ -367,7 +367,7 @@
 #u224 {
   border-width:0px;
   position:absolute;
-  left:224px;
+  left:125px;
   top:137px;
   width:98px;
   height:15px;
@@ -405,7 +405,7 @@
 #u225 {
   border-width:0px;
   position:absolute;
-  left:177px;
+  left:78px;
   top:176px;
   width:48px;
   height:22px;
@@ -442,7 +442,7 @@
 #u226 {
   border-width:0px;
   position:absolute;
-  left:152px;
+  left:53px;
   top:208px;
   width:73px;
   height:15px;
@@ -479,7 +479,7 @@
 #u227 {
   border-width:0px;
   position:absolute;
-  left:382px;
+  left:283px;
   top:176px;
   width:47px;
   height:22px;
@@ -516,7 +516,7 @@
 #u228 {
   border-width:0px;
   position:absolute;
-  left:382px;
+  left:283px;
   top:208px;
   width:87px;
   height:15px;
@@ -541,7 +541,7 @@
 #u229p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
   width:130px;
   height:6px;
@@ -557,7 +557,7 @@
 #u229p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -573,7 +573,7 @@
 #u229p002 {
   border-width:0px;
   position:absolute;
-  left:110px;
+  left:111px;
   top:-9px;
   width:22px;
   height:20px;
@@ -593,7 +593,7 @@
 #u229 {
   border-width:0px;
   position:absolute;
-  left:244px;
+  left:145px;
   top:201px;
   width:125px;
   height:1px;
@@ -634,7 +634,7 @@
 #u230 {
   border-width:0px;
   position:absolute;
-  left:129px;
+  left:30px;
   top:105px;
   width:34px;
   height:24px;
@@ -673,7 +673,7 @@
 #u231 {
   border-width:0px;
   position:absolute;
-  left:341px;
+  left:242px;
   top:137px;
   width:37px;
   height:15px;
@@ -699,7 +699,7 @@
 #u232 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:261px;
   width:420px;
   height:313px;
@@ -735,7 +735,7 @@
 #u233 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:282px;
   width:81px;
   height:19px;
@@ -768,7 +768,7 @@
 #u234 {
   border-width:0px;
   position:absolute;
-  left:423px;
+  left:324px;
   top:276px;
   width:1px;
   height:19px;
@@ -794,7 +794,7 @@
 #u235 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:320px;
   width:394px;
   height:1px;
@@ -819,7 +819,7 @@
 #u236 {
   border-width:0px;
   position:absolute;
-  left:211px;
+  left:112px;
   top:357px;
   width:23px;
   height:23px;
@@ -860,7 +860,7 @@
 #u237 {
   border-width:0px;
   position:absolute;
-  left:222px;
+  left:123px;
   top:366px;
   width:8px;
   height:15px;
@@ -900,7 +900,7 @@
 #u238 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:448px;
   width:119px;
   height:48px;
@@ -935,7 +935,7 @@
 #u239 {
   border-width:0px;
   position:absolute;
-  left:253px;
+  left:154px;
   top:448px;
   width:119px;
   height:48px;
@@ -970,7 +970,7 @@
 #u240 {
   border-width:0px;
   position:absolute;
-  left:390px;
+  left:291px;
   top:448px;
   width:119px;
   height:48px;
@@ -1005,7 +1005,7 @@
 #u241 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:506px;
   width:119px;
   height:48px;
@@ -1040,7 +1040,7 @@
 #u242 {
   border-width:0px;
   position:absolute;
-  left:253px;
+  left:154px;
   top:506px;
   width:119px;
   height:48px;
@@ -1065,7 +1065,7 @@
 #u243 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:669px;
   width:422px;
   height:65px;
@@ -1101,7 +1101,7 @@
 #u244 {
   border-width:0px;
   position:absolute;
-  left:408px;
+  left:309px;
   top:680px;
   width:101px;
   height:42px;
@@ -1138,7 +1138,7 @@
 #u245 {
   border-width:0px;
   position:absolute;
-  left:157px;
+  left:58px;
   top:692px;
   width:82px;
   height:22px;
@@ -1184,7 +1184,7 @@
 #u247 {
   border-width:0px;
   position:absolute;
-  left:322px;
+  left:223px;
   top:690px;
   width:33px;
   height:22px;
@@ -1210,7 +1210,7 @@
 #u248 {
   border-width:0px;
   position:absolute;
-  left:359px;
+  left:260px;
   top:694px;
   width:16px;
   height:16px;
@@ -1244,7 +1244,7 @@
 #u249 {
   border-width:0px;
   position:absolute;
-  left:117px;
+  left:18px;
   top:690px;
   width:33px;
   height:22px;
@@ -1280,7 +1280,7 @@
 #u250 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:332px;
   width:119px;
   height:48px;
@@ -1347,7 +1347,7 @@
 #u251 {
   border-width:0px;
   position:absolute;
-  left:211px;
+  left:112px;
   top:415px;
   width:23px;
   height:23px;
@@ -1388,7 +1388,7 @@
 #u252 {
   border-width:0px;
   position:absolute;
-  left:222px;
+  left:123px;
   top:424px;
   width:8px;
   height:15px;
@@ -1428,7 +1428,7 @@
 #u253 {
   border-width:0px;
   position:absolute;
-  left:115px;
+  left:16px;
   top:390px;
   width:119px;
   height:48px;
@@ -1474,7 +1474,7 @@
 #u254 {
   border-width:0px;
   position:absolute;
-  left:349px;
+  left:250px;
   top:415px;
   width:23px;
   height:23px;
@@ -1515,7 +1515,7 @@
 #u255 {
   border-width:0px;
   position:absolute;
-  left:360px;
+  left:261px;
   top:424px;
   width:8px;
   height:15px;
@@ -1555,7 +1555,7 @@
 #u256 {
   border-width:0px;
   position:absolute;
-  left:253px;
+  left:154px;
   top:390px;
   width:119px;
   height:48px;
@@ -1601,7 +1601,7 @@
 #u257 {
   border-width:0px;
   position:absolute;
-  left:349px;
+  left:250px;
   top:357px;
   width:23px;
   height:23px;
@@ -1642,7 +1642,7 @@
 #u258 {
   border-width:0px;
   position:absolute;
-  left:360px;
+  left:261px;
   top:366px;
   width:8px;
   height:15px;
@@ -1682,7 +1682,7 @@
 #u259 {
   border-width:0px;
   position:absolute;
-  left:253px;
+  left:154px;
   top:332px;
   width:119px;
   height:48px;
@@ -1728,7 +1728,7 @@
 #u260 {
   border-width:0px;
   position:absolute;
-  left:486px;
+  left:387px;
   top:415px;
   width:23px;
   height:23px;
@@ -1769,7 +1769,7 @@
 #u261 {
   border-width:0px;
   position:absolute;
-  left:497px;
+  left:398px;
   top:424px;
   width:8px;
   height:15px;
@@ -1809,7 +1809,7 @@
 #u262 {
   border-width:0px;
   position:absolute;
-  left:390px;
+  left:291px;
   top:390px;
   width:119px;
   height:48px;
@@ -1855,7 +1855,7 @@
 #u263 {
   border-width:0px;
   position:absolute;
-  left:486px;
+  left:387px;
   top:357px;
   width:23px;
   height:23px;
@@ -1896,7 +1896,7 @@
 #u264 {
   border-width:0px;
   position:absolute;
-  left:497px;
+  left:398px;
   top:366px;
   width:8px;
   height:15px;
@@ -1936,7 +1936,7 @@
 #u265 {
   border-width:0px;
   position:absolute;
-  left:390px;
+  left:291px;
   top:332px;
   width:119px;
   height:48px;
@@ -1982,7 +1982,7 @@
 #u266 {
   border-width:0px;
   position:absolute;
-  left:491px;
+  left:392px;
   top:285px;
   width:18px;
   height:18px;
@@ -1999,7 +1999,7 @@
 #u267 {
   border-width:0px;
   position:absolute;
-  left:219px;
+  left:120px;
   top:218px;
   width:167px;
   height:135px;
