--- a/files/单程航段搜索/styles.css
+++ b/files/单程航段搜索/styles.css
@@ -1,11 +1,11 @@
 ﻿body {
   margin:0px;
   background-image:none;
-  position:static;
-  left:auto;
-  width:521px;
-  margin-left:0;
-  margin-right:0;
+  position:relative;
+  left:-0px;
+  width:422px;
+  margin-left:auto;
+  margin-right:auto;
   text-align:left;
 }
 #base {
@@ -36,7 +36,7 @@
 #u111 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:0px;
   width:422px;
   height:734px;
@@ -64,7 +64,7 @@
 #u112 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:0px;
   width:420px;
   height:83px;
@@ -92,7 +92,7 @@
 #u113 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:83px;
   width:420px;
   height:118px;
@@ -132,7 +132,7 @@
 #u114 {
   border-width:0px;
   position:absolute;
-  left:232px;
+  left:133px;
   top:105px;
   width:37px;
   height:24px;
@@ -174,7 +174,7 @@
 #u115 {
   border-width:0px;
   position:absolute;
-  left:354px;
+  left:255px;
   top:105px;
   width:48px;
   height:24px;
@@ -204,7 +204,7 @@
 #u116p000 {
   border-width:0px;
   position:absolute;
-  left:-3px;
+  left:-2px;
   top:-3px;
   width:72px;
   height:6px;
@@ -220,7 +220,7 @@
 #u116p001 {
   border-width:0px;
   position:absolute;
-  left:-1px;
+  left:-2px;
   top:-1px;
   width:4px;
   height:4px;
@@ -236,7 +236,7 @@
 #u116p002 {
   border-width:0px;
   position:absolute;
-  left:53px;
+  left:52px;
   top:-9px;
   width:22px;
   height:20px;
@@ -256,7 +256,7 @@
 #u116 {
   border-width:0px;
   position:absolute;
-  left:277px;
+  left:178px;
   top:117px;
   width:67px;
   height:1px;
@@ -304,7 +304,7 @@
 #u118 {
   border-width:0px;
   position:absolute;
-  left:122px;
+  left:23px;
   top:173px;
   width:25px;
   height:17px;
@@ -344,7 +344,7 @@
 #u119 {
   border-width:0px;
   position:absolute;
-  left:116px;
+  left:17px;
   top:153px;
   width:39px;
   height:20px;
@@ -372,7 +372,7 @@
 #u120 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:142px;
   width:420px;
   height:1px;
@@ -420,7 +420,7 @@
 #u122 {
   border-width:0px;
   position:absolute;
-  left:181px;
+  left:82px;
   top:173px;
   width:25px;
   height:17px;
@@ -460,7 +460,7 @@
 #u123 {
   border-width:0px;
   position:absolute;
-  left:175px;
+  left:76px;
   top:153px;
   width:39px;
   height:20px;
@@ -508,7 +508,7 @@
 #u125 {
   border-width:0px;
   position:absolute;
-  left:239px;
+  left:140px;
   top:173px;
   width:25px;
   height:17px;
@@ -548,7 +548,7 @@
 #u126 {
   border-width:0px;
   position:absolute;
-  left:233px;
+  left:134px;
   top:153px;
   width:39px;
   height:20px;
@@ -596,7 +596,7 @@
 #u128 {
   border-width:0px;
   position:absolute;
-  left:298px;
+  left:199px;
   top:173px;
   width:25px;
   height:17px;
@@ -636,7 +636,7 @@
 #u129 {
   border-width:0px;
   position:absolute;
-  left:292px;
+  left:193px;
   top:153px;
   width:39px;
   height:20px;
@@ -684,7 +684,7 @@
 #u131 {
   border-width:0px;
   position:absolute;
-  left:356px;
+  left:257px;
   top:173px;
   width:25px;
   height:17px;
@@ -724,7 +724,7 @@
 #u132 {
   border-width:0px;
   position:absolute;
-  left:350px;
+  left:251px;
   top:153px;
   width:39px;
   height:20px;
@@ -772,7 +772,7 @@
 #u134 {
   border-width:0px;
   position:absolute;
-  left:415px;
+  left:316px;
   top:173px;
   width:25px;
   height:17px;
@@ -812,7 +812,7 @@
 #u135 {
   border-width:0px;
   position:absolute;
-  left:409px;
+  left:310px;
   top:153px;
   width:39px;
   height:20px;
@@ -840,7 +840,7 @@
 #u136 {
   border-width:0px;
   position:absolute;
-  left:164px;
+  left:65px;
   top:152px;
   width:1px;
   height:42px;
@@ -868,7 +868,7 @@
 #u137 {
   border-width:0px;
   position:absolute;
-  left:222px;
+  left:123px;
   top:152px;
   width:1px;
   height:42px;
@@ -896,7 +896,7 @@
 #u138 {
   border-width:0px;
   position:absolute;
-  left:280px;
+  left:181px;
   top:152px;
   width:1px;
   height:42px;
@@ -924,7 +924,7 @@
 #u139 {
   border-width:0px;
   position:absolute;
-  left:338px;
+  left:239px;
   top:152px;
   width:1px;
   height:42px;
@@ -952,7 +952,7 @@
 #u140 {
   border-width:0px;
   position:absolute;
-  left:397px;
+  left:298px;
   top:152px;
   width:1px;
   height:42px;
@@ -980,7 +980,7 @@
 #u141 {
   border-width:0px;
   position:absolute;
-  left:458px;
+  left:359px;
   top:152px;
   width:1px;
   height:42px;
@@ -1008,7 +1008,7 @@
 #u142 {
   border-width:0px;
   position:absolute;
-  left:243px;
+  left:144px;
   top:194px;
   width:14px;
   height:14px;
@@ -1040,7 +1040,7 @@
 #u143 {
   border-width:0px;
   position:absolute;
-  left:478px;
+  left:379px;
   top:161px;
   width:20px;
   height:20px;
@@ -1078,7 +1078,7 @@
 #u144 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:211px;
   width:402px;
   height:136px;
@@ -1103,7 +1103,7 @@
 #u145 {
   border-width:0px;
   position:absolute;
-  left:133px;
+  left:34px;
   top:223px;
   width:32px;
   height:32px;
@@ -1140,7 +1140,7 @@
 #u146 {
   border-width:0px;
   position:absolute;
-  left:234px;
+  left:135px;
   top:228px;
   width:43px;
   height:19px;
@@ -1177,7 +1177,7 @@
 #u147 {
   border-width:0px;
   position:absolute;
-  left:202px;
+  left:103px;
   top:258px;
   width:73px;
   height:15px;
@@ -1210,7 +1210,7 @@
 #u148 {
   border-width:0px;
   position:absolute;
-  left:121px;
+  left:22px;
   top:255px;
   width:49px;
   height:16px;
@@ -1235,7 +1235,7 @@
 #u149 {
   border-width:0px;
   position:absolute;
-  left:182px;
+  left:83px;
   top:227px;
   width:1px;
   height:42px;
@@ -1275,7 +1275,7 @@
 #u150 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:228px;
   width:43px;
   height:19px;
@@ -1312,7 +1312,7 @@
 #u151 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:258px;
   width:87px;
   height:15px;
@@ -1337,9 +1337,9 @@
 #u152p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u152p000_img {
@@ -1347,13 +1347,13 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u152p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -1369,7 +1369,7 @@
 #u152p002 {
   border-width:0px;
   position:absolute;
-  left:66px;
+  left:65px;
   top:-9px;
   width:22px;
   height:20px;
@@ -1389,7 +1389,7 @@
 #u152 {
   border-width:0px;
   position:absolute;
-  left:292px;
+  left:193px;
   top:251px;
   width:80px;
   height:1px;
@@ -1427,7 +1427,7 @@
 #u153 {
   border-width:0px;
   position:absolute;
-  left:425px;
+  left:326px;
   top:301px;
   width:73px;
   height:35px;
@@ -1451,7 +1451,7 @@
 #u154 {
   border-width:0px;
   position:absolute;
-  left:121px;
+  left:22px;
   top:289px;
   width:377px;
   height:1px;
@@ -1485,7 +1485,7 @@
 #u155 {
   border-width:0px;
   position:absolute;
-  left:125px;
+  left:26px;
   top:311px;
   width:117px;
   height:16px;
@@ -1520,7 +1520,7 @@
 #u156 {
   border-width:0px;
   position:absolute;
-  left:290px;
+  left:191px;
   top:311px;
   width:99px;
   height:16px;
@@ -1556,7 +1556,7 @@
 #u157 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:361px;
   width:402px;
   height:136px;
@@ -1593,7 +1593,7 @@
 #u158 {
   border-width:0px;
   position:absolute;
-  left:234px;
+  left:135px;
   top:378px;
   width:43px;
   height:19px;
@@ -1630,7 +1630,7 @@
 #u159 {
   border-width:0px;
   position:absolute;
-  left:202px;
+  left:103px;
   top:408px;
   width:73px;
   height:15px;
@@ -1665,7 +1665,7 @@
 #u160 {
   border-width:0px;
   position:absolute;
-  left:125px;
+  left:26px;
   top:407px;
   width:51px;
   height:18px;
@@ -1692,7 +1692,7 @@
 #u161 {
   border-width:0px;
   position:absolute;
-  left:182px;
+  left:83px;
   top:377px;
   width:1px;
   height:42px;
@@ -1732,7 +1732,7 @@
 #u162 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:378px;
   width:42px;
   height:19px;
@@ -1769,7 +1769,7 @@
 #u163 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:408px;
   width:87px;
   height:15px;
@@ -1794,9 +1794,9 @@
 #u164p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u164p000_img {
@@ -1804,13 +1804,13 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u164p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -1826,7 +1826,7 @@
 #u164p002 {
   border-width:0px;
   position:absolute;
-  left:66px;
+  left:65px;
   top:-9px;
   width:22px;
   height:20px;
@@ -1846,7 +1846,7 @@
 #u164 {
   border-width:0px;
   position:absolute;
-  left:292px;
+  left:193px;
   top:401px;
   width:80px;
   height:1px;
@@ -1884,7 +1884,7 @@
 #u165 {
   border-width:0px;
   position:absolute;
-  left:425px;
+  left:326px;
   top:451px;
   width:73px;
   height:35px;
@@ -1908,7 +1908,7 @@
 #u166 {
   border-width:0px;
   position:absolute;
-  left:121px;
+  left:22px;
   top:439px;
   width:377px;
   height:1px;
@@ -1942,7 +1942,7 @@
 #u167 {
   border-width:0px;
   position:absolute;
-  left:125px;
+  left:26px;
   top:461px;
   width:117px;
   height:16px;
@@ -1977,7 +1977,7 @@
 #u168 {
   border-width:0px;
   position:absolute;
-  left:290px;
+  left:191px;
   top:461px;
   width:99px;
   height:16px;
@@ -2003,7 +2003,7 @@
 #u169 {
   border-width:0px;
   position:absolute;
-  left:138px;
+  left:39px;
   top:378px;
   width:26px;
   height:24px;
@@ -2038,7 +2038,7 @@
 #u170 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:512px;
   width:402px;
   height:136px;
@@ -2075,7 +2075,7 @@
 #u171 {
   border-width:0px;
   position:absolute;
-  left:234px;
+  left:135px;
   top:529px;
   width:43px;
   height:19px;
@@ -2112,7 +2112,7 @@
 #u172 {
   border-width:0px;
   position:absolute;
-  left:202px;
+  left:103px;
   top:559px;
   width:73px;
   height:15px;
@@ -2147,7 +2147,7 @@
 #u173 {
   border-width:0px;
   position:absolute;
-  left:125px;
+  left:26px;
   top:558px;
   width:51px;
   height:18px;
@@ -2174,7 +2174,7 @@
 #u174 {
   border-width:0px;
   position:absolute;
-  left:182px;
+  left:83px;
   top:528px;
   width:1px;
   height:42px;
@@ -2214,7 +2214,7 @@
 #u175 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:529px;
   width:43px;
   height:19px;
@@ -2251,7 +2251,7 @@
 #u176 {
   border-width:0px;
   position:absolute;
-  left:392px;
+  left:293px;
   top:559px;
   width:87px;
   height:15px;
@@ -2276,9 +2276,9 @@
 #u177p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-2px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u177p000_img {
@@ -2286,13 +2286,13 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:84px;
+  width:86px;
   height:6px;
 }
 #u177p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:0px;
   width:4px;
   height:2px;
@@ -2308,7 +2308,7 @@
 #u177p002 {
   border-width:0px;
   position:absolute;
-  left:66px;
+  left:65px;
   top:-10px;
   width:22px;
   height:20px;
@@ -2328,7 +2328,7 @@
 #u177 {
   border-width:0px;
   position:absolute;
-  left:292px;
+  left:193px;
   top:552px;
   width:80px;
   height:1px;
@@ -2366,7 +2366,7 @@
 #u178 {
   border-width:0px;
   position:absolute;
-  left:425px;
+  left:326px;
   top:602px;
   width:73px;
   height:35px;
@@ -2390,7 +2390,7 @@
 #u179 {
   border-width:0px;
   position:absolute;
-  left:121px;
+  left:22px;
   top:590px;
   width:377px;
   height:1px;
@@ -2424,7 +2424,7 @@
 #u180 {
   border-width:0px;
   position:absolute;
-  left:125px;
+  left:26px;
   top:612px;
   width:117px;
   height:16px;
@@ -2459,7 +2459,7 @@
 #u181 {
   border-width:0px;
   position:absolute;
-  left:290px;
+  left:191px;
   top:612px;
   width:99px;
   height:16px;
@@ -2494,7 +2494,7 @@
 #u182 {
   border-width:0px;
   position:absolute;
-  left:320px;
+  left:221px;
   top:529px;
   width:25px;
   height:15px;
@@ -2529,7 +2529,7 @@
 #u183 {
   border-width:0px;
   position:absolute;
-  left:320px;
+  left:221px;
   top:559px;
   width:25px;
   height:15px;
@@ -2555,7 +2555,7 @@
 #u184 {
   border-width:0px;
   position:absolute;
-  left:138px;
+  left:39px;
   top:529px;
   width:26px;
   height:24px;
