--- a/files/添加优惠人/styles.css
+++ b/files/添加优惠人/styles.css
@@ -1,11 +1,11 @@
 ﻿body {
   margin:0px;
   background-image:none;
-  position:static;
-  left:auto;
-  width:521px;
-  margin-left:0;
-  margin-right:0;
+  position:relative;
+  left:-0px;
+  width:422px;
+  margin-left:auto;
+  margin-right:auto;
   text-align:left;
 }
 #base {
@@ -36,7 +36,7 @@
 #u185 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:0px;
   width:422px;
   height:734px;
@@ -64,7 +64,7 @@
 #u186 {
   border-width:0px;
   position:absolute;
-  left:100px;
+  left:1px;
   top:0px;
   width:420px;
   height:83px;
@@ -92,7 +92,7 @@
 #u187 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:93px;
   width:400px;
   height:145px;
@@ -131,7 +131,7 @@
 #u188 {
   border-width:0px;
   position:absolute;
-  left:307px;
+  left:208px;
   top:107px;
   width:29px;
   height:20px;
@@ -171,7 +171,7 @@
 #u189 {
   border-width:0px;
   position:absolute;
-  left:372px;
+  left:273px;
   top:107px;
   width:40px;
   height:20px;
@@ -200,9 +200,9 @@
 #u190p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
-  width:36px;
+  width:38px;
   height:6px;
 }
 #u190p000_img {
@@ -210,13 +210,13 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:36px;
+  width:38px;
   height:6px;
 }
 #u190p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -232,7 +232,7 @@
 #u190p002 {
   border-width:0px;
   position:absolute;
-  left:18px;
+  left:17px;
   top:-9px;
   width:22px;
   height:20px;
@@ -252,7 +252,7 @@
 #u190 {
   border-width:0px;
   position:absolute;
-  left:340px;
+  left:241px;
   top:117px;
   width:32px;
   height:1px;
@@ -291,7 +291,7 @@
 #u191 {
   border-width:0px;
   position:absolute;
-  left:261px;
+  left:162px;
   top:107px;
   width:29px;
   height:20px;
@@ -330,7 +330,7 @@
 #u192 {
   border-width:0px;
   position:absolute;
-  left:215px;
+  left:116px;
   top:107px;
   width:39px;
   height:20px;
@@ -367,7 +367,7 @@
 #u193 {
   border-width:0px;
   position:absolute;
-  left:224px;
+  left:125px;
   top:137px;
   width:98px;
   height:15px;
@@ -405,7 +405,7 @@
 #u194 {
   border-width:0px;
   position:absolute;
-  left:177px;
+  left:78px;
   top:172px;
   width:48px;
   height:22px;
@@ -442,7 +442,7 @@
 #u195 {
   border-width:0px;
   position:absolute;
-  left:152px;
+  left:53px;
   top:204px;
   width:73px;
   height:15px;
@@ -479,7 +479,7 @@
 #u196 {
   border-width:0px;
   position:absolute;
-  left:382px;
+  left:283px;
   top:172px;
   width:47px;
   height:22px;
@@ -516,7 +516,7 @@
 #u197 {
   border-width:0px;
   position:absolute;
-  left:382px;
+  left:283px;
   top:204px;
   width:87px;
   height:15px;
@@ -541,7 +541,7 @@
 #u198p000 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-3px;
   top:-3px;
   width:130px;
   height:6px;
@@ -557,7 +557,7 @@
 #u198p001 {
   border-width:0px;
   position:absolute;
-  left:-2px;
+  left:-1px;
   top:-1px;
   width:4px;
   height:4px;
@@ -573,7 +573,7 @@
 #u198p002 {
   border-width:0px;
   position:absolute;
-  left:110px;
+  left:111px;
   top:-9px;
   width:22px;
   height:20px;
@@ -593,7 +593,7 @@
 #u198 {
   border-width:0px;
   position:absolute;
-  left:244px;
+  left:145px;
   top:197px;
   width:125px;
   height:1px;
@@ -634,7 +634,7 @@
 #u199 {
   border-width:0px;
   position:absolute;
-  left:123px;
+  left:24px;
   top:105px;
   width:34px;
   height:24px;
@@ -673,7 +673,7 @@
 #u200 {
   border-width:0px;
   position:absolute;
-  left:341px;
+  left:242px;
   top:137px;
   width:37px;
   height:15px;
@@ -699,7 +699,7 @@
 #u201 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:251px;
   width:400px;
   height:69px;
@@ -735,7 +735,7 @@
 #u202 {
   border-width:0px;
   position:absolute;
-  left:153px;
+  left:54px;
   top:274px;
   width:81px;
   height:19px;
@@ -760,7 +760,7 @@
 #u203 {
   border-width:0px;
   position:absolute;
-  left:99px;
+  left:0px;
   top:669px;
   width:422px;
   height:65px;
@@ -796,7 +796,7 @@
 #u204 {
   border-width:0px;
   position:absolute;
-  left:408px;
+  left:309px;
   top:680px;
   width:101px;
   height:42px;
@@ -834,7 +834,7 @@
 #u205 {
   border-width:0px;
   position:absolute;
-  left:157px;
+  left:58px;
   top:692px;
   width:82px;
   height:22px;
@@ -881,7 +881,7 @@
 #u207 {
   border-width:0px;
   position:absolute;
-  left:322px;
+  left:223px;
   top:690px;
   width:33px;
   height:22px;
@@ -907,7 +907,7 @@
 #u208 {
   border-width:0px;
   position:absolute;
-  left:359px;
+  left:260px;
   top:694px;
   width:16px;
   height:16px;
@@ -941,7 +941,7 @@
 #u209 {
   border-width:0px;
   position:absolute;
-  left:117px;
+  left:18px;
   top:690px;
   width:33px;
   height:22px;
@@ -967,7 +967,7 @@
 #u210 {
   border-width:0px;
   position:absolute;
-  left:477px;
+  left:378px;
   top:276px;
   width:18px;
   height:18px;
@@ -992,7 +992,7 @@
 #u211 {
   border-width:0px;
   position:absolute;
-  left:122px;
+  left:23px;
   top:273px;
   width:24px;
   height:24px;
@@ -1017,7 +1017,7 @@
 #u212 {
   border-width:0px;
   position:absolute;
-  left:109px;
+  left:10px;
   top:333px;
   width:400px;
   height:62px;
@@ -1045,7 +1045,7 @@
 #u213 {
   border-width:0px;
   position:absolute;
-  left:123px;
+  left:24px;
   top:354px;
   width:24px;
   height:24px;
@@ -1078,7 +1078,7 @@
 #u214 {
   border-width:0px;
   position:absolute;
-  left:153px;
+  left:54px;
   top:356px;
   width:65px;
   height:19px;
@@ -1095,7 +1095,7 @@
 #u215 {
   border-width:0px;
   position:absolute;
-  left:234px;
+  left:135px;
   top:349px;
   width:261px;
   height:36px;
