--- a/files/pc/styles.css
+++ b/files/pc/styles.css
@@ -1378,3 +1378,38 @@
   visibility:hidden;
   word-wrap:break-word;
 }
+#u47_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  height:16px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  text-decoration:underline;
+  color:#AEAEAE;
+}
+#u47 {
+  border-width:0px;
+  position:absolute;
+  left:476px;
+  top:69px;
+  width:85px;
+  height:16px;
+  text-decoration:underline;
+  color:#AEAEAE;
+}
+#u47_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:85px;
+  white-space:nowrap;
+}
