--- a/files/binke-pc/styles.css
+++ b/files/binke-pc/styles.css
@@ -3,7 +3,7 @@
   background-image:none;
   position:relative;
   left:-0px;
-  width:982px;
+  width:953px;
   margin-left:auto;
   margin-right:auto;
   text-align:left;
@@ -17,16 +17,16 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:982px;
-  height:603px;
+  width:953px;
+  height:1193px;
 }
 #u0 {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:982px;
-  height:603px;
+  width:953px;
+  height:1193px;
 }
 #u0_text {
   border-width:0px;
@@ -67,7 +67,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:73px;
+  width:97px;
   height:17px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -85,9 +85,9 @@
 #u2 {
   border-width:0px;
   position:absolute;
-  left:451px;
-  top:140px;
-  width:73px;
+  left:425px;
+  top:141px;
+  width:97px;
   height:17px;
   font-family:'微软雅黑';
   font-weight:400;
@@ -100,12 +100,12 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:73px;
+  width:97px;
   white-space:nowrap;
 }
 #u3 {
   position:absolute;
-  left:534px;
+  left:526px;
   top:134px;
 }
 #u3_state0 {
@@ -422,7 +422,7 @@
 #u12 {
   border-width:0px;
   position:absolute;
-  left:408px;
+  left:394px;
   top:264px;
   width:97px;
   height:17px;
@@ -482,11 +482,21 @@
   white-space:nowrap;
 }
 #u14 {
+  border-width:0px;
   position:absolute;
-  left:515px;
+  left:348px;
+  top:1024px;
+  width:123px;
+  height:51px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u15 {
+  position:absolute;
+  left:501px;
   top:258px;
 }
-#u14_state0 {
+#u15_state0 {
   position:relative;
   left:0px;
   top:0px;
@@ -494,7 +504,7 @@
   height:30px;
   background-image:none;
 }
-#u14_state0_content {
+#u15_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -502,7 +512,7 @@
   width:1px;
   height:1px;
 }
-#u15_div {
+#u16_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -521,7 +531,7 @@
   box-shadow:none;
   text-align:left;
 }
-#u15 {
+#u16 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -530,7 +540,7 @@
   height:30px;
   text-align:left;
 }
-#u15_text {
+#u16_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -538,7 +548,7 @@
   width:66px;
   word-wrap:break-word;
 }
-#u16_img {
+#u17_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -546,7 +556,7 @@
   width:12px;
   height:12px;
 }
-#u16 {
+#u17 {
   border-width:0px;
   position:absolute;
   left:53px;
@@ -554,7 +564,7 @@
   width:12px;
   height:12px;
 }
-#u16_text {
+#u17_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -563,7 +573,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u17 {
+#u18 {
   border-width:0px;
   position:absolute;
   left:5px;
@@ -571,7 +581,7 @@
   width:48px;
   height:28px;
 }
-#u17_input {
+#u18_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -587,7 +597,7 @@
   border-color:transparent;
   outline-style:none;
 }
-#u14_state1 {
+#u15_state1 {
   position:relative;
   left:0px;
   top:0px;
@@ -596,7 +606,7 @@
   visibility:hidden;
   background-image:none;
 }
-#u14_state1_content {
+#u15_state1_content {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -604,7 +614,7 @@
   width:1px;
   height:1px;
 }
-#u18_div {
+#u19_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -623,7 +633,7 @@
   box-shadow:0px 0px 5px rgba(3, 171, 159, 0.349019607843137);
   text-align:left;
 }
-#u18 {
+#u19 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -633,7 +643,7 @@
   opacity:0.6;
   text-align:left;
 }
-#u18_text {
+#u19_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -641,7 +651,7 @@
   width:66px;
   word-wrap:break-word;
 }
-#u19_img {
+#u20_img {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -649,7 +659,7 @@
   width:12px;
   height:12px;
 }
-#u19 {
+#u20 {
   border-width:0px;
   position:absolute;
   left:53px;
@@ -661,7 +671,7 @@
   -ms-transform:rotate(180deg);
   transform:rotate(180deg);
 }
-#u19_text {
+#u20_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -670,7 +680,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-.u21_div {
+.u22_div {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -696,7 +706,7 @@
   font-size:12px;
   text-align:left;
 }
-.u21 {
+.u22 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -709,7 +719,7 @@
   font-size:12px;
   text-align:left;
 }
-.u21_text {
+.u22_text {
   border-width:0px;
   position:absolute;
   left:2px;
@@ -717,7 +727,7 @@
   width:68px;
   word-wrap:break-word;
 }
-#u20-1 {
+#u21-1 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -725,7 +735,7 @@
   width:70px;
   height:32px;
 }
-#u20-2 {
+#u21-2 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -733,7 +743,7 @@
   width:70px;
   height:32px;
 }
-#u20-3 {
+#u21-3 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -741,7 +751,7 @@
   width:70px;
   height:32px;
 }
-#u20-4 {
+#u21-4 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -749,7 +759,7 @@
   width:70px;
   height:32px;
 }
-#u20-5 {
+#u21-5 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -757,7 +767,7 @@
   width:70px;
   height:32px;
 }
-#u20-6 {
+#u21-6 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -765,7 +775,7 @@
   width:70px;
   height:32px;
 }
-#u20-7 {
+#u21-7 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -773,7 +783,7 @@
   width:70px;
   height:32px;
 }
-#u20-8 {
+#u21-8 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -781,7 +791,7 @@
   width:70px;
   height:32px;
 }
-#u20 {
+#u21 {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -793,7 +803,7 @@
   border:none;
   border-radius:0px;
 }
-#u22 {
+#u23 {
   border-width:0px;
   position:absolute;
   left:5px;
@@ -801,7 +811,7 @@
   width:48px;
   height:28px;
 }
-#u22_input {
+#u23_input {
   position:absolute;
   left:0px;
   top:0px;
@@ -817,23 +827,45 @@
   border-color:transparent;
   outline-style:none;
 }
-#u23_img {
+#u24 {
+  position:absolute;
+  left:266px;
+  top:485px;
+  visibility:hidden;
+}
+#u24_state0 {
+  position:relative;
+  left:0px;
+  top:0px;
+  width:422px;
+  height:224px;
+  background-image:none;
+}
+#u24_state0_content {
   border-width:0px;
   position:absolute;
   left:0px;
   top:0px;
-  width:909px;
-  height:231px;
+  width:1px;
+  height:1px;
 }
-#u23 {
+#u25_img {
   border-width:0px;
   position:absolute;
-  left:34px;
-  top:460px;
-  width:909px;
-  height:231px;
+  left:0px;
+  top:0px;
+  width:422px;
+  height:224px;
 }
-#u23_text {
+#u25 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:422px;
+  height:224px;
+}
+#u25_text {
   border-width:0px;
   position:absolute;
   left:0px;
@@ -841,4 +873,39 @@
   width:0px;
   visibility:hidden;
   word-wrap:break-word;
+}
+#u26_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:300px;
+  height:34px;
+}
+#u26 {
+  border-width:0px;
+  position:absolute;
+  left:24px;
+  top:92px;
+  width:300px;
+  height:34px;
+  text-align:left;
+}
+#u26_text {
+  border-width:0px;
+  position:absolute;
+  left:2px;
+  top:9px;
+  width:296px;
+  word-wrap:break-word;
+}
+#u27 {
+  border-width:0px;
+  position:absolute;
+  left:295px;
+  top:182px;
+  width:104px;
+  height:31px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
 }
